Update dist files

--- a/aminclude_static.am
+++ b/aminclude_static.am
@@ -1,6 +1,6 @@
 
 # aminclude_static.am generated automatically by Autoconf
-# from AX_AM_MACROS_STATIC on Sun Feb 16 04:02:05 UTC 2025
+# from AX_AM_MACROS_STATIC on Wed Feb 19 21:03:09 kst 2025
 
 
 # Code coverage
